ReadersCotroller, ReaderServise classes updated